<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/article_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/android_wallpaper"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_marginHorizontal="14dp"
                android:layout_marginBottom="14dp"
                android:layout_gravity="bottom"
                android:id="@+id/biodata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginBottom="-2dp"
                    android:textSize="22sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/android_10_jadi_versi_android_terpopuler_di_indonesia"
                    android:textColor="@color/textIcons"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                </TextView>

                <TextView
                    android:drawablePadding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/jakarta_indonesia_kompas_com"
                    android:textColor="@color/textIcons"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_place_white">
                </TextView>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="14dp"
            android:layout_below="@id/article_title"
            android:id="@+id/article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/article_text"
            android:textColor="@color/primaryText"
            android:textSize="14sp">
        </TextView>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="28dp"
            android:layout_below="@id/article"
            android:orientation="horizontal">

            <Button
                android:paddingTop="15dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:drawableTop="@drawable/ic_thumb_up_black_24dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/btn_set_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/like"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:paddingTop="15dp"
                style="@style/Widget.AppCompat.Button"
                android:drawableTop="@drawable/ic_share_black_24dp"
                android:layout_marginStart="10dp"
                android:id="@+id/btn_set_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/share"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>